docs: 更新 JVM 垃圾回收文档
- 移除了垃圾回收流程图上方的多余空行
- 优化了文档的格式和可读性